--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 :root {
     --clr-text:#002647;
     --clr-primary: #067E0A;
-    --clr-accent: #764981;
+    --clr-accent: #613b6b;
 
     --ff-crimson: "Crimson Pro", serif;
     --ff-logo: "Kaushan Script", sans-serif;
@@ -21,7 +21,7 @@ html {
     box-sizing: border-box;
     font-family: var(--ff-crimson);
     color: var(--clr-text);
-    font-size: 1.125rem;
+    font-size: 1.25rem;
 }
 
 body {
@@ -31,6 +31,10 @@ body {
 img {
     display: block;
     max-width: 100%;
+}
+
+section {
+    padding: 3em 1em;
 }
 
 /* Typography */
@@ -46,14 +50,20 @@ p {
 h2, 
 h3 {
     font-family: var(--ff-title);
-    line-height: 0.8;
-    line-height: 2.5rem;
+    line-height: 1.5;
+    letter-spacing: 1px;
 }
 h2 {
-    font-size: 2rem;
+    font-size: 2em;
 }
 p {
     margin-bottom: .85em;
+}
+.section-title-small {
+    font-size: 2rem;
+}
+.text-primary {
+    color: var(--clr-primary);
 }
 .logo {
     font-family: var(--ff-logo);
@@ -66,7 +76,7 @@ p {
 
 /* Navigation */
 header {
-    padding: 1rem 0 2rem;
+    padding: 1em 0 2em;
 }
 
 nav ul {
@@ -79,7 +89,7 @@ nav ul {
 
 nav a {
     display: inline-block;
-    padding: 0.5rem;
+    padding: 0.5em;
     color: var(--clr-primary);
     text-decoration: none;
 }
@@ -95,12 +105,31 @@ nav a:hover {
 /* Homepage Styles */
 
 .hero {
-    background-color: #333;
+    background-color: #555;
     background-image: url(../images/bg-techbomba.jpg);
     background-blend-mode: multiply;
     background-attachment: fixed;
     background-size: cover;
     color: white;
     text-align: center;
-    padding: 20vh 1rem;
+    padding: 20vh 1em;
+}
+
+.intro {
+    text-align: center;
+}
+
+.about-us {
+    background: var(--clr-accent);
+    display: flex;
+    flex-direction: column;
+    color: white;
+    padding: 0;
+}
+
+.about-us__intro {
+    background-image: url(../images/bg-2.jpg);
+    background-blend-mode: multiply;
+    background-size: cover;
+    padding: 3rem 1rem;
 }
