--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ h3 {
     letter-spacing: 1px;
 }
 h2 {
-    font-size: 2em;
+    font-size: 2rem;
 }
 p {
     margin-bottom: .85em;
@@ -109,7 +109,29 @@ nav a:hover {
 
 /* Buttons */
 
+.btn-group {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
 
+.btn {
+    padding: .75em 2.5em;
+    color: white;
+    text-decoration: none;
+    display: block;
+    margin: 0.5em 0;
+    border-radius: .35em;
+}
+
+.btn-accent {
+    background: var(--clr-accent);
+    color: white;
+}
+
+.btn-primary {
+    background: var(--clr-primary);
+}
 
 /* Homepage Styles */
 
@@ -140,4 +162,35 @@ nav a:hover {
 
 .about-us__body {
     padding: 1.5em 1em 3em;
+}
+
+.order-online {
+    background: #f0f0f0;
+}
+
+.services {
+    display: flex;
+    flex-direction: column;
+}
+
+.service {
+    padding: 1em;
+    border-radius: .35em;
+    box-shadow: 0 0 .7em rgba(0, 0, 0, .1);
+    margin: 0 0 1em;
+}
+
+.service__content {
+    padding: .3em;
+}
+
+.service__title {
+    color: var(--clr-primary);
+    font-size: 1.2rem;
+    margin-bottom: .5em;
+}
+
+.fineprint {
+    font-size: .75rem;
+    color: rgba(0, 0, 0, .85);
 }
