--- a/css/style.css
+++ b/css/style.css
@@ -172,8 +172,11 @@ nav a:hover {
 }
 
 .about-us__intro {
+    background-color: var(--clr-accent);
     background-image: url(../images/bg-softdev.jpg);
     background-size: cover;
+    background-attachment: fixed;
+    background-blend-mode: multiply;
     padding: 3em 1em 1.5em;
 }
 
@@ -301,6 +304,64 @@ footer li {
 
 @media only screen and (min-width: 750px) {
     section {
+        margin-top: 1em;
         padding: 6em 1em;
     }
+
+    .btn-group {
+        flex-direction: row;
+    }
+
+    .btn + .btn {
+        margin-left: .5em;
+    }
+
+    p:last-child {
+        margin-bottom: 0;
+    }
+
+    .about-us{
+        flex-direction: row;
+        align-items: center;
+    }
+
+    .about-us__intro,
+    .about-us__body {
+        flex: 0 1 50%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 4em 2em;
+        justify-content: center;
+    }
+
+    .about-us__intro {
+        text-align: right;
+    }
+
+    .about-us__intro > * {
+        max-width: 25rem;
+        margin-left: auto;
+    }
+
+    .about-us__body {
+        text-align: left;
+    }
+
+    .about-us__body > * {
+        max-width: 25rem;
+        margin-right: auto;
+    }
+
+    .order-online > * {
+        max-width: 55ch;
+        margin-left: auto;
+        margin-right: auto;
+        justify-content: center;
+    }
+
+    .services {
+        flex-direction: row;
+    } 
+    
 }
