--- a/css/style.css
+++ b/css/style.css
@@ -118,6 +118,7 @@ nav a:hover {
 .btn-group {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     flex-direction: column;
 }
 
@@ -184,13 +185,14 @@ nav a:hover {
     padding: 1.5em 1em 3em;
 }
 
-.order-online {
+.connect-with-us {
     background: #f0f0f0;
 }
 
 .services {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     max-width: 30rem;
     margin: 0 auto;
 }
@@ -310,6 +312,7 @@ footer li {
 
     .btn-group {
         flex-direction: row;
+        justify-content: center;
     }
 
     .btn + .btn {
@@ -353,7 +356,7 @@ footer li {
         margin-right: auto;
     }
 
-    .order-online > * {
+    .connect-with-us > * {
         max-width: 55ch;
         margin-left: auto;
         margin-right: auto;
@@ -362,6 +365,18 @@ footer li {
 
     .services {
         flex-direction: row;
-    } 
+        max-width: 1200px;
+        padding: 0 5em;
+    }
+
+    .service {
+        margin: 0;
+        flex: 0 1 33%;
+        justify-content: space-evenly;
+    }
+
+    .service + .service {
+        margin-left: 1rem;
+    }
     
 }
